--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
 	"name": "wetube",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "src/index.js",
 	"scripts": {
-		"dev": "nodemon --exec babel-node index.js"
+		"dev": "nodemon --exec babel-node src/index.js"
 	},
 	"author": "",
 	"license": "MIT",
+	"type": "module",
 	"dependencies": {
 		"express": "^4.18.2"
 	},
