--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.22.8",
 		"@babel/node": "^7.22.6",
-		"@babel/preset-env": "^7.22.7"
+		"@babel/preset-env": "^7.22.7",
+		"morgan": "^1.10.0"
 	}
 }
