--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "src/index.js",
 	"scripts": {
-		"dev": "nodemon --exec babel-node src/index.js"
+		"dev:server": "nodemon --exec babel-node src/server/index.js"
 	},
 	"author": "",
 	"license": "MIT",
