--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"pug": "^3.0.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.8",
