--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
 	"license": "MIT",
 	"dependencies": {
 		"express": "^4.18.2",
+		"morgan": "^1.10.0",
+		"mongoose": "^7.4.1",
 		"pug": "^3.0.2"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.22.8",
 		"@babel/node": "^7.22.6",
-		"@babel/preset-env": "^7.22.7",
-		"morgan": "^1.10.0"
+		"@babel/preset-env": "^7.22.7"
 	}
 }
