--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
 	"author": "",
 	"license": "MIT",
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"express": "^4.18.2",
-		"morgan": "^1.10.0",
 		"mongoose": "^7.4.1",
+		"morgan": "^1.10.0",
 		"pug": "^3.0.2"
 	},
 	"devDependencies": {
