--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Youtube clone project to practise nodeJS",
 	"main": "src/index.js",
 	"scripts": {
-		"dev:server": "nodemon --exec babel-node src/server/index.js"
+		"dev:server": "nodemon --exec babel-node src/server/index.js",
+		"assets": "webpack --config webpack.config.js"
 	},
 	"author": "",
 	"license": "MIT",
@@ -22,6 +23,9 @@
 	"devDependencies": {
 		"@babel/core": "^7.22.8",
 		"@babel/node": "^7.22.6",
-		"@babel/preset-env": "^7.22.7"
+		"@babel/preset-env": "^7.22.7",
+		"babel-loader": "^9.1.3",
+		"webpack": "^5.88.2",
+		"webpack-cli": "^5.1.4"
 	}
 }
