--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
 		"@babel/node": "^7.22.6",
 		"@babel/preset-env": "^7.22.7",
 		"babel-loader": "^9.1.3",
+		"css-loader": "^6.8.1",
+		"mini-css-extract-plugin": "^2.7.6",
+		"sass": "^1.66.1",
+		"sass-loader": "^13.3.2",
+		"style-loader": "^3.3.3",
 		"webpack": "^5.88.2",
 		"webpack-cli": "^5.1.4"
 	}
