--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "Youtube clone project to practise nodeJS",
 	"main": "src/index.js",
 	"scripts": {
-		"dev:server": "nodemon --exec babel-node src/server/index.js",
-		"assets": "webpack --config webpack.config.js"
+		"dev:server": "nodemon",
+		"dev:assets": "webpack --config webpack.config.js"
 	},
 	"author": "",
 	"license": "MIT",
